# SummarizerAI

./: .env.example  .gitignore  AGENT_PROMPT_DEBUG_HUNGARIAN_TUNE_DP.md  DIA_TTS_INTEGRATION_PROMPT.md  FACET_implementation_brief.md  GEMINI_BRIEF_A3_external_baseline.md  GEMINI_BRIEF_bab4_assets.md  GEMINI_BRIEF_full_run_v2.md  GEMINI_BRIEF_predictive_DACA.md  GEMINI_BRIEF_vlm_and_figures.md  LICENSE  PHASE2_AND_PHASE4_IMPROVEMENT_PROMPT.md  PHASE4_MAJOR_UPGRADE_v3.md  PHASE4_v3_DEBUG_PLAN.md  PHASE5_CLIP_CAP_PROMPT.md  README.md  aggregate_n10.py  alt1_v2.py  analyze_probe.py  anchor_policy.py  animation_plan.json  assemble_images.py  audit_checklist.md  audit_report.md  auto_gate_judge.py  brief_audio_duration.md  brief_ccma_ablation_v1.md  brief_debug_annotation.md  brief_diagnose_output.md  brief_evaluation_v1.md  brief_fix_assembler.md  brief_fix_m2_v1.md  brief_hunyuan_num_frames.md  brief_hunyuan_vram_optim.md  brief_ltx_prompt_refine.md  brief_ltx_prompt_refine_v2.md  brief_ltx_smoke_test.md  brief_phase4_audit.md  brief_phase4_restore.md  brief_phase4_restore_stage2.md  (+138 more)
WRITTING_STUFFS/: HANDOFF_PHASE_B.md  assemble_images.py  make_part1.py  make_part2.py  tab_anim_rules.md  tab_frontier_ecology_rows.csv  tab_runtime.md  tab_vlm_prompt.md
addon_results/: MANIFEST.txt  runtime_info.txt  runtime_vram.csv  vlm_model.txt  vlm_questions.txt  vlm_results_aggregate.csv
appendix_artifacts/: models.txt  phase4_config.txt  prompts.txt  wan_i2v_workflow.json
audit_tests/: ccma_fix_verification.py  test_scope_a.py  test_scope_b.py  test_scope_c.py
configs/: default.yaml  facet.yaml  smoke_test.yaml
data/: dataset_summary.csv
frontend/: tailwind.config.js  vite.config.js
fullrun_results/: MANIFEST.txt  RUN_INFO.txt
notes/: cleanrun_interpretation.md  cleanrun_interpretation_v2.md  config_snapshot_cleanrun.yaml  dp_jump_penalty_sweep.json  dp_subset_analysis.md  dp_sweep_diagnostic.md  dp_theoretical_analysis.md  dp_tuning_decision.md  hungarian_diagnosis.md  interpretation_revisions.md  parameter_sweep_pilot.md  parameter_sweep_results.csv  per_video_analysis.md  per_video_results.csv  review1_consistency_check.md  scene_diversity_results.md  significance_tests.md  significance_tests_cvalign.md  significance_tests_v2.md  track_c_fallback.md  tuning_verification.md  viscoher_strict_results.md  (+1 more)
(+372 files in other folders)
