[project]
name = "video-summarizer"
version = "0.1.0"
description = "AI pipeline to summarize long video podcasts into short videos with AI voiceover and semantic B-roll matching."
authors = [
    { name = "User", email = "user@example.com" }
]
dependencies = [
    "torch==2.5.1",
    "torchaudio==2.5.1",
    "torchvision==0.20.1",
    "transformers==4.45.2",
    "accelerate==0.34.2",
    "bitsandbytes==0.44.1",
    "whisperx==3.3.1",
    "scenedetect[opencv]==0.6.4",
    "sentence-transformers==3.1.1",
    "open-clip-torch==2.26.1",
    "qwen-vl-utils==0.0.8",
    "groq==0.11.0",
    "ffmpeg-python==0.2.0",
    "autoawq==0.2.9",
    "pydantic==2.9.2",
    "pyyaml==6.0.2",
    "tqdm==4.66.5",
    "rich==13.8.1",
    "pynvml==11.5.3",
    "rouge-score==0.1.2",
    "bert-score==0.3.13",
    "librosa==0.10.2",
    "soundfile==0.12.1",
    "pyloudnorm==0.1.1",
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "python-multipart==0.0.9",
    "websockets==12.0",
    "descript-audio-codec>=1.0.0",
    "nari-tts @ file://localhost/home/wins053/Desktop/SumarizerAI-1-Gemini/video-summarizer/libs/dia"
]
requires-python = "==3.11.*"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
